Introduce ScriptCommandAst to keep the ProofEngine separated from ANTLR's parse tree